# skycli

./: .gitignore  README.md  pyproject.toml
skycli/: __init__.py  post.py
